<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/round_background_white">

        <LinearLayout
            android:id="@+id/setting_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13.2dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="13sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting"
                    android:textColor="#173143"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reset_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/initialization"
                    android:textColor="#20d994"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_f2f2f3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/frequency_setting"
                android:textColor="#9d9d9d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/frequency_2_4_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="2.4 Ghz"
                    android:textColor="#173143"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/frequency_2_4img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/tick_circle_none" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_d8d8d8" />

            <RelativeLayout
                android:id="@+id/frequency_5_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/wifi_sensor"
                    android:textColor="#173143"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/frequency_5_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/tick_circle_none" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_d8d8d8" />

            <RelativeLayout
                android:id="@+id/log_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Log Message"
                    android:textColor="#173143"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/log_message_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/tick_circle_none" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_d8d8d8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/collection_setting"
                android:textColor="#9d9d9d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/step_length_btn"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/step_setting"
                    android:textColor="#173143"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/step_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textColor="#173143"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_d8d8d8" />

            <RelativeLayout
                android:id="@+id/setting_sensor_setting"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/gyro_sensor"
                    android:textColor="#173143"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/sensor_setting_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/tick_circle_none" />
            </RelativeLayout>

            <View
                android:id="@+id/setting_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_d8d8d8" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/make_map_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/setting_menu_layout"
            android:layout_marginStart="21dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="21dp"
            android:background="@color/c_00ca9d">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/ok"
                android:textColor="#ffffff"
                android:textSize="14.9sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/make_map_btn" />
    </RelativeLayout>
</RelativeLayout>