<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/gather_map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"></RelativeLayout>

    <include
        android:id="@+id/new_path_drawing"
        layout="@layout/path_drawing_new_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible" />

    <FrameLayout
        android:id="@+id/gathering_bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#0B3687"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/map_inner_frm_linear1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/my_way_path_start"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/record_start"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/my_way_path_end"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:enabled="false"
                android:text="@string/record_end"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reverse_record_btn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:enabled="false"
                android:text="@string/reverse_record"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/record_cancel"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:enabled="false"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/save_point_check_btn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:enabled="false"
                android:text="@string/point_registration"
                android:textColor="@color/black"
                android:textSize="13sp" />


        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/my_way_record_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/gathering_bottom_bar"
        android:background="@color/black"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/record_list_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="@string/record_list"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/poi_list_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="@string/poi_list"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/path_drawing_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="설정"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:visibility="visible" />
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/poi_point_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/poi_point_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13sp"
                android:layout_marginTop="19dp"
                android:text="@string/set_poi_title"
                android:textColor="#173143"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/poi_line_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/poi_point_text"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18sp"
                android:layout_marginEnd="13sp"
                android:background="@color/c_f2f2f3" />

            <TextView
                android:id="@+id/poi_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/poi_line_1"
                android:layout_marginStart="13sp"
                android:layout_marginTop="13sp"
                android:text="No. #"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/poi_edit_layout"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_below="@+id/poi_num"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="12dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/poi_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/poi_cancel"
                    android:background="@color/white"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/input_poi_name_message"
                    android:inputType="text"
                    android:maxLength="6"
                    android:singleLine="true" />

                <RelativeLayout
                    android:id="@+id/poi_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8.1dp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/delete_btn" />
                </RelativeLayout>
            </RelativeLayout>

            <View
                android:id="@+id/poi_line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/poi_edit_layout"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="13sp"
                android:background="@color/c_d8d8d8" />

            <LinearLayout
                android:id="@+id/poi_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_below="@+id/poi_line_2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/poi_cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="9dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_background_9d9d9d">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/cancel"
                        android:textColor="#ffffff"
                        android:textSize="14.9sp"
                        android:textStyle="bold" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/poi_add_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="9dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_background_00ca9d">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/poi_registration"
                        android:textColor="#ffffff"
                        android:textSize="14.9sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/poi_btn_layout" />

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/poi_edit_box_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/c_00ca9d">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18sp"
                android:text="POI 이름을 입력하세요."
                android:textColor="@color/black"
                android:textSize="24dp" />

            <RelativeLayout
                android:id="@+id/poi_edit_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/poi_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/poi_cancel_layout"
                    android:background="@color/white"
                    android:focusable="true"
                    android:inputType="text"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:text="" />

                <LinearLayout
                    android:id="@+id/poi_cancel_layout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_cancel_search" />
                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/poi_save_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/poi_edit_text_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="확인" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/record_view_layout"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/record_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_forward" />

        <TextView
            android:id="@+id/record_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:letterSpacing="-0.07"
            android:lineSpacingExtra="22sp"
            android:text="1"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </RelativeLayout>

    <include
        android:id="@+id/path_drawing_option"
        layout="@layout/path_drawing_option"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/step_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/my_way_record_info_layout"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="한발씩!"
        android:visibility="gone" />



</RelativeLayout>